# adb_llm_automation

./: CODEOWNERS  README.md  action_dispatcher.py  adb_connector.py  pre_requisite.txt  pyproject.toml  requirement.txt
adb_llm_automation/: cli.py  runner.py
adb_llm_automation/actions/: action_dispatcher.py  actions.py
adb_llm_automation/core/: adb_connector.py  utils.py
adb_llm_automation/llm/: openai_client.py  parser.py
tests/Smoke Tests/: SKAND001 - Open and close app.txt
