[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "adb-llm-automation"
version = "0.1.0"
description = "Turn natural language into Android ADB automation"
authors = [{ name = "Habib Yusuf" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
"typer>=0.12",
"rich>=13.7",
"pydantic>=2.7",
"python-dotenv>=1.0",
"openai>=1.40; python_version>='3.9'",
]


[project.scripts]
adb-llm = "adb_llm_automation.cli:app"